Fix/ignore findbugs warnings, added findbugs annotatins dependency.